# cmd/api/api.go
@@ -85,10 +85,10 @@ func (app *application) mount() http.Handler {
 			r.Group(func(r chi.Router) {
 				r.Get("/feed", app.getUserFeedHandler)
 			})
+		})
 
-			r.Route("/authentication", func(r chi.Router) {
-				r.Get("/", app.registerUserHandler)
-			})
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
 		})
 	})
 
